--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body, html {
     height: 100%;
-    background-image: url(../images/new_bg.jpg);
+    background-image: linear-gradient(rgba(23, 32, 42, 0.5), rgba(74, 35, 90, 0.9)), url('../images/new_bg.jpg');
     background-position: center;
     background-repeat:no-repeat;
     background-attachment: fixed;
@@ -56,8 +56,8 @@ footer {
 
 .container{
     text-align: center;
-    color: black;
-    background-color: white;
+    color: white;
+    
     border-radius: 15px;
     margin-top: 30px;
     width: fit-content;
@@ -66,7 +66,7 @@ footer {
     font: 850 3rem sans-serif ;
     padding: 1rem;
     animation-name: fade-text;
-    animation-duration: 1s;
+    animation-duration: 2s;
     background-attachment: fixed;
 
 }
@@ -86,9 +86,9 @@ footer {
     padding-top: 10px;
     padding-bottom: 10px;
     animation-name: paragraph1;
-    color: black;
+    color: white;
     border-radius: 15px;
-    animation-duration: 7s;
+    animation-duration: 5s;
 }
 
 @keyframes paragraph1{
@@ -155,7 +155,7 @@ footer {
 }
 
 
-
-
-
-
+.contain{
+  padding-top: 5rem;
+  padding-left: 5rem;
+}
